WIP: aligning buttons correctly

--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,28 @@
     border: 2px solid red;
 }
 
-.numbers-container {
-    border: 2px solid red;
-    display: flex;
-    flex-direction: row;
-}
 
 .numbers-container-2 {
-    border: 2px solid red;
+    border: 2px solid green;
+    display: flex;
+
+}
+
+
+.operators-container {
+    border: 2px solid orange;
+    display: flex;
+    width: 30px;
+    flex-direction: column;
+}
+
+.special-buttons-container {
+    border: 2px solid yellow;
+    display: flex;
+
+}
+.App {
+    display: flex;
+    background-color: red;
+    width: 300px;
 }
